chore: implemented mapstruct and began monstercontroller